a lot of changes plus telegram bot